<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="btn_label_spotifyStreamer">SPOTIFY STREAMER</string>
    <string name="btn_label_scoresApp">SCORES APP</string>
    <string name="btn_label_libraryApp">LIBRARY APP</string>
    <string name="btn_label_buildItBigger">BUILD IT BIGGER</string>
    <string name="btn_label_baconReader">XYZ READER</string>
    <string name="btn_label_capstone">CAPSTONE: MY OWN APP</string>


</resources>
